crates/smart-config/tests/ui/config/invalid_path_delimiter.stderr
error[E0080]: evaluation panicked: Path #0 `what..1` is invalid: name contains a disallowed char '.' at position 5; allowed chars are [_a-z]
 --> tests/ui/config/invalid_path_delimiter.rs:2:5
  |
2 |     smart_config::config!("what..1": 1);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `main::_` failed here
  |
  = note: this error originates in the macro `smart_config::config` (in Nightly builds, run with -Z macro-backtrace for more info)
